--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </li>
       </ul>
     </header>
+    <!-- Main text -->
     <main>
       <!-- Work at the speed of thought section -->
       <section>
@@ -451,6 +452,62 @@
         />
       </section>
     </main>
-    <footer></footer>
+    <!-- Footer -->
+    <footer>
+      <a href="./index.html"
+        ><img
+          src="./images/logo.svg"
+          alt="logo"
+          width="40"
+          height="36"
+        />Product</a
+      >
+      <nav>
+        <ul>
+          <li>
+            <a href="http://"
+              ><img src="./images/insta.png" alt="insta" width="40" height="40"
+            /></a>
+          </li>
+          <li>
+            <a href="http://"
+              ><img src="./images/fb.png" alt="fb" width="40" height="40"
+            /></a>
+          </li>
+          <li>
+            <a href="http://"
+              ><img
+                src="./images/twitter.png"
+                alt="twitter"
+                width="40"
+                height="40"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+      <h3>Resource</h3>
+      <ul>
+        <li><a href="http://">About Us</a></li>
+        <li><a href="http://">Blog</a></li>
+        <li><a href="http://">Contact</a></li>
+        <li><a href="http://">FAQ</a></li>
+      </ul>
+      <h3>Legal Stuff</h3>
+      <ul>
+        <li><a href="http://">Disclaimer</a></li>
+        <li><a href="http://">Financing</a></li>
+        <li><a href="http://">Privacy Policy</a></li>
+      </ul>
+      <p>knowing you're always on the best energy deal</p>
+      <img
+        src="./images/mobile-screen.svg"
+        alt="mobile-screen"
+        width="18"
+        height="28"
+      />
+      <p>Enter your phone number</p>
+      <button type="button">Sign up Now</button>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+    </footer>
   </body>
 </html>
