--- a/index.html
+++ b/index.html
@@ -465,17 +465,17 @@
       <nav>
         <ul>
           <li>
-            <a href="http://"
+            <a href="http://" target="_blank"
               ><img src="./images/insta.png" alt="insta" width="40" height="40"
             /></a>
           </li>
           <li>
-            <a href="http://"
+            <a href="http://" target="_blank"
               ><img src="./images/fb.png" alt="fb" width="40" height="40"
             /></a>
           </li>
           <li>
-            <a href="http://"
+            <a href="http://" target="_blank"
               ><img
                 src="./images/twitter.png"
                 alt="twitter"
